Added TODOs to Polybar Config

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -74,7 +74,8 @@ enable-ipc = true
 type = custom/text
 
 click-left = exec "~/.local/bin/powermenu"
-content = "%"
+; TODO: Add NerdFonts Power Symbol
+content = "%" 
 
 [module/xworkspaces]
 type = internal/xworkspaces
@@ -119,8 +120,11 @@ format-volume = <label-volume>
 
 label-volume = %percentage%%
 
-label-muted = muted
+; TODO: Find way to have prefix when muted
+label-muted = M
 label-muted-foreground = ${colors.disabled}
+
+; TODO: Add Rofi volume control
 
 [module/xkeyboard]
 type = internal/xkeyboard
@@ -159,6 +163,8 @@ label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
 inherit = network-base
 interface-type = wireless
 label-connected = %{F#F0C674}%ifname%%{F-} %essid% 
+; TODO: Maybe add wifi controller
+
 ;%local_ip%
 
 ; [module/eth]
