--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -39,10 +39,10 @@ color15  #d8caac
 
 background_opacity 0.5
 
-font_family      Jetbrains Mono
-bold_font        Jetbrains Mono Medium
-italic_font      Jetbrains Mono Italic
-bold_italic_font Jetbrains Mono Medium Italic
+font_family      JetBrainsMono Nerd Font Mono
+bold_font        JetBrainsMono Nerd Font Mono Medium
+italic_font      JetbrainsMono Nerd Font Mono Italic
+bold_italic_font JetBrainsMono Nerd Font Mono Medium Italic
 
 
 # vim:fileencoding=utf-8:foldmethod=marker
