--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -8,53 +8,50 @@
 ;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
 ;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
 ;
-;
-;   To learn more about how to configure Polybar
-;   go to https://github.com/polybar/polybar
-;
-;   The README contains a lot of information
+; Polybar Config by James Girven
 ;
 ;==========================================================
 
 [colors]
-;background = #282A2E
-background = #1D2021
-background-alt = #373B41
-foreground = #C5C8C6
-primary = #F0C674
-;secondary = #8ABEB7
-;secondary = #9ece6a
-secondary = #a7c080
-alert = #A54242
-disabled = #707880
+background = #2D353B
+background-alt = #7A8478
+foreground = #D3C6AA
+primary = #A7C080
+secondary = #83C092
+alert = #E67E80
+disabled = #859289
+
 
 [bar/bar]
+
+; Fonts
+font-0 = JetBrainsMono NF:style=Regular
+
 width = 100%
 height = 24pt
-radius = 6
+radius = 0
+fixed-center = true
 
-; dpi = 96
+dpi = 96
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
 line-size = 3pt
 
-border-size = 4pt
-border-color = #00000000
+border-size = 1.5pt
+border-color = #3D484D
 
 padding-left = 0
-padding-right = 1
+padding-right = 2
 
 module-margin = 1
 
 separator = |
-separator-foreground = ${colors.disabled}
+separator-foreground = ${colors.background}
 
-;font-0 = monospace;2
-font-0 = "JetBrainsMono:size=12;2"
 
-modules-left = xworkspaces xwindow
+modules-left = i3 xwindow
 modules-right = filesystem pulseaudio xkeyboard memory cpu wlan date power
 
 cursor-click = pointer
@@ -62,39 +59,42 @@ cursor-scroll = ns-resize
 
 enable-ipc = true
 
-; tray-position = right
-
-; wm-restack = generic
-; wm-restack = bspwm
-; wm-restack = i3
-
-; override-redirect = true
 
 [module/power]
 type = custom/text
-
 click-left = exec "~/.local/bin/powermenu"
-; TODO: Add NerdFonts Power Symbol
-content = "%" 
+content = "󰐥" 
 
-[module/xworkspaces]
-type = internal/xworkspaces
+[module/i3]
+type = internal/i3
 
-label-active = %name%
-label-active-background = ${colors.background-alt}
-label-active-underline= ${colors.primary}
-label-active-padding = 1
+; Monitor specific workspaces on different bars
+pin-workspaces = true
 
-label-occupied = %name%
-label-occupied-padding = 1
+; This will split the workspace name on ':'
+strip-wsnumbers = true
+index-sort = true
+
+label-focused = %name%
+label-focused-foreground = ${colors.background}
+label-focused-background = ${colors.primary}
+label-focused-padding = 1
+
+label-unfocused = %name%
+label-unfocused-padding = 1
+
+label-visible = %name%
+label-visible-padding = 1
 
 label-urgent = %name%
+label-urgent-foreground = ${colors.background}
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 1
 
-label-empty = %name%
-label-empty-foreground = ${colors.disabled}
-label-empty-padding = 1
+label-mode = %mode%
+label-mode-foreground = ${colors.background}
+label-mode-background = ${colors.primary}
+label-mode-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
@@ -114,29 +114,35 @@ label-unmounted-foreground = ${colors.disabled}
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "VOL "
+format-volume-prefix = "󰕾 "
 format-volume-prefix-foreground = ${colors.primary}
 format-volume = <label-volume>
 
 label-volume = %percentage%%
 
-; TODO: Find way to have prefix when muted
-label-muted = M
+; TODO: Add Rofi volume control
+click-middle = pavucontrol
+
+label-muted = "󰖁 0%"
+; label-muted = muted
 label-muted-foreground = ${colors.disabled}
 
-; TODO: Add Rofi volume control
 
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
 
-label-layout = %layout%
-label-layout-foreground = ${colors.primary}
+; format-prefix = "󰥻 "
+format-prefix = "󰌌 "
+format-prefix-foreground = ${colors.primary}
 
-label-indicator-padding = 2
+label-layout = %layout%
+
+label-indicator-on = %name%
+label-indicator-padding = 1
 label-indicator-margin = 1
 label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.secondary}
+label-indicator-background = ${colors.primary}
 
 [module/memory]
 type = internal/memory
@@ -155,6 +161,8 @@ label = %percentage:2%%
 [network-base]
 type = internal/network
 interval = 5
+format-connected-prefix = "󰖩 "
+format-connected-prefix-foreground = ${colors.primary}
 format-connected = <label-connected>
 format-disconnected = <label-disconnected>
 label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
@@ -162,10 +170,8 @@ label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid% 
+label-connected = %{F#F0C674}%ifname%%{F-}
 ; TODO: Maybe add wifi controller
-
-;%local_ip%
 
 ; [module/eth]
 ; inherit = network-base
@@ -178,6 +184,7 @@ interval = 1
 
 date = %H:%M
 date-alt = %Y-%m-%d %H:%M:%S
+; date-alt = %d-%m-%Y %H:%M:%S
 
 label = %date%
 label-foreground = ${colors.primary}
