--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,48 +1,125 @@
-foreground            #d8caac
-background            #1d2021
+# foreground            #d8caac
+# background            #1d2021
+# selection_foreground  #3c474d
+# selection_background  #86a15d
+# url_color             #415c6d
+
+
+# # black
+# color0   #4a555b
+# color8   #525c62
+
+# # red
+# color1   #e68183
+# color9   #e68183
+
+# # green
+# color2   #a7c080
+# color10  #a7c080
+
+# # yellow
+# color3   #dbbc7f
+# color11  #dbbc7f
+
+# # blue
+# color4  #7fbbb3
+# color12 #7fbbb3
+
+# # magenta
+# color5   #d699b6
+# color13  #d699b6
+
+# # cyan
+# color6   #83c092
+# color14  #83c092
+
+# # white
+# color7   #d8caac
+# color15  #d8caac
+
+
+# FONT
+font_family      JetBrainsMono Nerd Font Mono
+bold_font        JetBrainsMono Nerd Font Mono Medium
+italic_font      JetbrainsMono Nerd Font Mono Italic
+bold_italic_font JetBrainsMono Nerd Font Mono Medium Italic
+
+font-size 12
+
+# CURSOR
+cursor none
+# cursor_beam_thickness 1.2
+
+# Disable programming ligatures on cursor hover
+disable_ligatures cursor
+
+# MOUSE
+url_color #415c6d
+url_style curly
+
+# TERMINAL BELL
+enable_audio_bell no
+visual_bell_color #859289
+
+# WINDOW LAYOUT
+window_padding_width 10
+placement_strategy top-left
+# Color for border of active window
+active_border_color #a7c080
+inactive_border_color #374247
+bell_border_color #e67e80
+
+# COLOR SCHEME
+
+foreground #d8caac
+background #1d2021
+background_opacity 0.5
+
+dynamic_background_opacity yes
+
+# map kitty_mod+a>m set_background_opacity +0.1
+# map kitty_mod+a>l set_background_opacity -0.1
+map kitty_mod+l    set_background_opacity 1
+map kitty_mod+0    set_background_opacity default
+
+
+# foreground #d3c6aa
+# background #2d353b
+
 selection_foreground  #3c474d
 selection_background  #86a15d
-url_color             #415c6d
-cursor                #ffffff
 
 # black
-color0   #4a555b
-color8   #525c62
+color0 #7a8478
+color8 #859289
 
 # red
-color1   #e68183
-color9   #e68183
+color1 #e68183
+color9 #e68183
 
 # green
-color2   #a7c080
-color10  #a7c080
+color2  #a7c080
+color10 #a7c080
 
 # yellow
-color3   #dbbc7f
-color11  #dbbc7f
+color3  #dbbc7f
+color11 #dbbc7f
 
 # blue
 color4  #7fbbb3
 color12 #7fbbb3
 
 # magenta
-color5   #d699b6
-color13  #d699b6
+color5  #d699b6
+color13 #d699b6
 
 # cyan
-color6   #83c092
-color14  #83c092
+color6  #83c092
+color14 #83c092
 
 # white
-color7   #d8caac
-color15  #d8caac
-
-background_opacity 0.5
-
-font_family      JetBrainsMono Nerd Font Mono
-bold_font        JetBrainsMono Nerd Font Mono Medium
-italic_font      JetbrainsMono Nerd Font Mono Italic
-bold_italic_font JetBrainsMono Nerd Font Mono Medium Italic
+color7  #d8cacc
+color15 #d8cacc
 
 
 # vim:fileencoding=utf-8:foldmethod=marker
