Fixed font rendering issues

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -40,11 +40,22 @@
 
 # FONT
 font_family      JetBrainsMono Nerd Font Mono
-bold_font        JetBrainsMono Nerd Font Mono Medium
-italic_font      JetbrainsMono Nerd Font Mono Italic
-bold_italic_font JetBrainsMono Nerd Font Mono Medium Italic
+# bold_font        JetBrainsMono Nerd Font Mono Medium
+# italic_font      JetbrainsMono Nerd Font Mono Italic
+# bold_italic_font JetBrainsMono Nerd Font Mono Medium Italic
 
-font-size 12
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+
+
+
+font_size 12
+
+# symbol_map U+0250-U+02AF Iosevka Nerd Font Mono
+# symbol_map U+02B0-U+02FF Iosevka Nerd Font Mono
+# symbol_map U+0300-U+036F Iosevka Nerd Font Mono
+
 
 # CURSOR
 cursor none
