Added Rofi Calc and Emoji - Minor polybar tweaks

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -21,6 +21,9 @@ secondary = #83C092
 alert = #E67E80
 disabled = #859289
 
+[settings]
+screenchange-reload = true
+pseudo-transparency = false
 
 [bar/bar]
 
@@ -58,7 +61,6 @@ cursor-click = pointer
 cursor-scroll = ns-resize
 
 enable-ipc = true
-
 
 [module/power]
 type = custom/text
@@ -189,8 +191,6 @@ date-alt = %Y-%m-%d %H:%M:%S
 label = %date%
 label-foreground = ${colors.primary}
 
-[settings]
-screenchange-reload = true
-pseudo-transparency = true
+
 
 ; vim:ft=dosini
