--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -162,17 +162,23 @@ label = %percentage:2%%
 
 [network-base]
 type = internal/network
-interval = 5
+interval = 1
+
+accumulate-stats = true
+unknown-as-up = true
+
 format-connected-prefix = "󰖩 "
 format-connected-prefix-foreground = ${colors.primary}
 format-connected = <label-connected>
 format-disconnected = <label-disconnected>
-label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
+; label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
+label-disconnected = "%{A1:networkmanager_dmenu &:} Offline%{A}"
 
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-}
+; label-connected = %{F#F0C674}%ifname%%{F-}
+label-connected = "%{A1:networkmanager_dmenu &:} %essid% %downspeed%%{A}"
 ; TODO: Maybe add wifi controller
 
 ; [module/eth]
