--- a/i3/config
+++ b/i3/config
@@ -180,6 +180,8 @@ bindsym $mod+Shift+r restart
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 # opens powermenu
 bindsym $mod+Shift+x exec "~/.local/bin/powermenu"
+# runs screenshot program
+bindsym Print exec "flameshot gui"
 
 
 # resize window (you can also use the mouse for that)
