Fixed kitty colours

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -35,20 +35,19 @@ bell_border_color #e67e80
 
 # COLOR SCHEME
 
-foreground #d8caac
+foreground #d3c6aa
+# foreground #d8caac
 background #1d2021
+# background #2d353b
+# background #323d43
 background_opacity 0.5
 
 dynamic_background_opacity yes
 
-# map kitty_mod+a>m set_background_opacity +0.1
-# map kitty_mod+a>l set_background_opacity -0.1
+map kitty_mod+a>m set_background_opacity +0.1
+map kitty_mod+a>l set_background_opacity -0.1
 map kitty_mod+l    set_background_opacity 1
 map kitty_mod+0    set_background_opacity default
-
-
-# foreground #d3c6aa
-# background #2d353b
 
 selection_foreground  #3c474d
 selection_background  #86a15d
