Edited polybar power button

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -46,7 +46,7 @@ border-size = 1.5pt
 border-color = #3D484D
 
 padding-left = 0
-padding-right = 2
+; padding-right = 2
 
 module-margin = 1
 
@@ -65,7 +65,10 @@ enable-ipc = true
 [module/power]
 type = custom/text
 click-left = exec "~/.local/bin/powermenu"
-content = "󰐥" 
+content = "󰐥"
+content-padding = 1
+content-background = ${colors.primary}
+content-foreground = ${colors.background}
 
 [module/i3]
 type = internal/i3
@@ -150,6 +153,7 @@ label-indicator-background = ${colors.primary}
 type = internal/memory
 interval = 2
 format-prefix = "RAM "
+; format-prefix = "󰍛 "
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
 
@@ -157,6 +161,7 @@ label = %percentage_used:2%%
 type = internal/cpu
 interval = 2
 format-prefix = "CPU "
+; format-prefix = " "
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
