Update `PolyBar` config

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -20,6 +20,7 @@ primary = #A7C080
 secondary = #83C092
 alert = #E67E80
 disabled = #859289
+transparent = #00000000
 
 [settings]
 screenchange-reload = true
@@ -33,42 +34,40 @@ font-0 = JetBrainsMono NF:style=Regular
 width = 100%
 height = 24pt
 radius = 0
-fixed-center = true
-
 dpi = 96
-
 background = ${colors.background}
 foreground = ${colors.foreground}
-
-line-size = 3pt
-
+;line-size = 3pt
 border-size = 1.5pt
 border-color = #3D484D
+module-margin = 0
+padding-left = 0pt
+padding-right = 0pt
+separator = " "
+;separator = |
+;separator-foreground = ${colors.background}
 
-padding-left = 0
-; padding-right = 2
-
-module-margin = 1
-
-separator = |
-separator-foreground = ${colors.background}
-
-
-modules-left = i3 xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan date power
-
+fixed-center = true
+modules-left = i3 tray xwindow
+modules-right = xkeyboard cpu memory filesystem temp pulseaudio wlan date power
 cursor-click = pointer
-cursor-scroll = ns-resize
-
+# cursor-scroll = ns-resize
 enable-ipc = true
+wm-restack = i3
+
+;==========================================================
 
 [module/power]
 type = custom/text
 click-left = exec "~/.local/bin/powermenu"
+;content = " 
+;content = "󰐦"
 content = "󰐥"
 content-padding = 1
 content-background = ${colors.primary}
 content-foreground = ${colors.background}
+
+;==========================================================
 
 [module/i3]
 type = internal/i3
@@ -101,18 +100,23 @@ label-mode-foreground = ${colors.background}
 label-mode-background = ${colors.primary}
 label-mode-padding = 1
 
+;==========================================================
+
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:60:...%
 
+;==========================================================
+
 [module/filesystem]
 type = internal/fs
 interval = 25
-
 mount-0 = /
+format-mounted-prefix = "%{A2:kitty ranger:} %{A}"
+format-mounted-prefix-foreground = ${colors.primary}
 
-label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
-
+;label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
+label-mounted = "%{A2:kitty ranger:}%percentage_used%%{A}"
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
 
@@ -128,17 +132,22 @@ label-volume = %percentage%%
 ; TODO: Add Rofi volume control
 click-middle = pavucontrol
 
-label-muted = "󰖁 0%"
-; label-muted = muted
+format-muted-prefix = "󰖁 "
+format-muted-foreground = ${colors.disabled}
+
+label-muted = "0%"
 label-muted-foreground = ${colors.disabled}
 
+;==========================================================
 
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
 
-; format-prefix = "󰥻 "
-format-prefix = "󰌌 "
+;format-prefix = "󰌌 "
+;format-prefix = " "
+;format-prefix = "󰥻 "
+format-prefix = "󰌓 "
 format-prefix-foreground = ${colors.primary}
 
 label-layout = %layout%
@@ -149,21 +158,27 @@ label-indicator-margin = 1
 label-indicator-foreground = ${colors.background}
 label-indicator-background = ${colors.primary}
 
+label-indicator-on-capslock = "CL"
+
+;==========================================================
+
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "RAM "
-; format-prefix = "󰍛 "
+format-prefix = " "
+;format-prefix = "R "
 format-prefix-foreground = ${colors.primary}
-label = %percentage_used:2%%
+label = "%{A2:kitty htop:}%percentage_used:2%%%{A}"
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "CPU "
-; format-prefix = " "
+format-prefix = " "
+;format-prefix = "C "
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
+
+;==========================================================
 
 [network-base]
 type = internal/network
@@ -175,21 +190,24 @@ unknown-as-up = true
 format-connected-prefix = "󰖩 "
 format-connected-prefix-foreground = ${colors.primary}
 format-connected = <label-connected>
+
+format-disconnected-prefix = "󰖪 "
 format-disconnected = <label-disconnected>
 ; label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
-label-disconnected = "%{A1:networkmanager_dmenu &:} Offline%{A}"
+label-disconnected = "%{A1:~/.local/bin/wifimenu &:} Offline%{A}"
 
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-; label-connected = %{F#F0C674}%ifname%%{F-}
-label-connected = "%{A1:networkmanager_dmenu &:} %essid% %downspeed%%{A}"
-; TODO: Maybe add wifi controller
+;label-connected = %{F#F0C674}%ifname%%{F-}
+label-connected = "%{A1:~/.local/bin/wifimenu &:} %essid% %downspeed:7%%{A}"
 
 ; [module/eth]
 ; inherit = network-base
 ; interface-type = wired
 ; label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+
+;==========================================================
 
 [module/date]
 type = internal/date
@@ -202,6 +220,37 @@ date-alt = %Y-%m-%d %H:%M:%S
 label = %date%
 label-foreground = ${colors.primary}
 
+;==========================================================
+
+[module/temp]
+type = internal/temperature
+interval = 2
+thermal-zone = 0
+hwmon-path = /sys/class/hwmon/hwmon0/temp1_input
+base-temperature = 20 
+warn-temperature = 80
+units = true
+
+format =<label>
+format-prefix = " "
+format-prefix-foreground= ${colors.primary}
+
+label = %temperature-c%
+label-foreground = ${colors.foreground}
+
+format-warn-prefix = ""
+format-warn-prefix-foreground= ${colors.alert}
+
+label-warn = %temperature-c%
+label-warn-foreground = ${colors.alert}
+
+;==========================================================
+
+[module/tray]
+type = internal/tray
+format = <tray>
+;format-prefix = "󱊖 "
+;format-prefix-foreground = ${colors.primary}
 
 
 ; vim:ft=dosini
