--- a/i3/config
+++ b/i3/config
@@ -176,5 +176,5 @@ bindsym $mod+r mode "resize"
 
 exec_always dunst &
 exec_always ~/.config/polybar/launch.sh &
-exec_always feh --bg-fill ../walls/background.jpg
+exec_always feh --bg-fill $HOME/.dotfiles/walls/background.jpg
 exec_always picom
