--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -200,7 +200,7 @@ label-disconnected = "%{A1:~/.local/bin/wifimenu &:} Offline%{A}"
 inherit = network-base
 interface-type = wireless
 ;label-connected = %{F#F0C674}%ifname%%{F-}
-label-connected = "%{A1:~/.local/bin/wifimenu &:} %essid% %downspeed:7%%{A}"
+label-connected = "%{A1:~/.local/bin/wifimenu &:} %essid% %downspeed:8%%{A}"
 
 ; [module/eth]
 ; inherit = network-base
@@ -231,17 +231,18 @@ base-temperature = 20
 warn-temperature = 80
 units = true
 
-format =<label>
-format-prefix = " "
-format-prefix-foreground= ${colors.primary}
+format = <ramp> <label>
+format-warn = <ramp> <label-warn>
+
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
+ramp-foreground = ${colors.primary}
+ramp-2-foreground = ${colors.alert}
 
 label = %temperature-c%
-label-foreground = ${colors.foreground}
-
-format-warn-prefix = ""
-format-warn-prefix-foreground= ${colors.alert}
-
 label-warn = %temperature-c%
+label-foreground = ${colors.foreground}
 label-warn-foreground = ${colors.alert}
 
 ;==========================================================
