--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -37,10 +37,14 @@ bell_border_color #e67e80
 
 foreground #d3c6aa
 # foreground #d8caac
-background #1d2021
+
+background #2b3339
+# background #1d2021
 # background #2d353b
 # background #323d43
-background_opacity 0.5
+
+# background_opacity 0.5
+background_opacity 1
 
 dynamic_background_opacity yes
 
