--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -49,7 +49,7 @@ separator = " "
 
 fixed-center = true
 modules-left = i3 tray xwindow
-modules-right = xkeyboard cpu memory filesystem temp pulseaudio wlan date power
+modules-right = xkeyboard temp cpu memory filesystem pulseaudio wlan date power
 cursor-click = pointer
 # cursor-scroll = ns-resize
 enable-ipc = true
@@ -60,8 +60,8 @@ wm-restack = i3
 [module/power]
 type = custom/text
 click-left = exec "~/.local/bin/powermenu"
-;content = " 
-;content = "󰐦"
+; content = ""
+; content = "󰐦"
 content = "󰐥"
 content-padding = 1
 content-background = ${colors.primary}
@@ -155,10 +155,9 @@ label-layout = %layout%
 label-indicator-on = %name%
 label-indicator-padding = 1
 label-indicator-margin = 1
-label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.primary}
 
-label-indicator-on-capslock = "CL"
+label-indicator-on-capslock = ""
+label-indicator-off-capslock = " "
 
 ;==========================================================
 
@@ -174,7 +173,6 @@ label = "%{A2:kitty htop:}%percentage_used:2%%%{A}"
 type = internal/cpu
 interval = 2
 format-prefix = " "
-;format-prefix = "C "
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
@@ -182,25 +180,61 @@ label = %percentage:2%%
 
 [network-base]
 type = internal/network
-interval = 1
-
+interval = 3
 accumulate-stats = true
 unknown-as-up = true
 
-format-connected-prefix = "󰖩 "
-format-connected-prefix-foreground = ${colors.primary}
-format-connected = <label-connected>
-
-format-disconnected-prefix = "󰖪 "
+format-connected = <ramp-signal> <label-connected>
 format-disconnected = <label-disconnected>
-; label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
-label-disconnected = "%{A1:~/.local/bin/wifimenu &:} Offline%{A}"
+
+label-disconnected = "%{A1:~/.local/bin/wifimenu &:}󰤭 Offline%{A}"
+
+# ramp-signal-0 = 󰤭
+ramp-signal-0 = "%{A1:~/.local/bin/wifimenu &:}󰤯%{A}"
+ramp-signal-1 = "%{A1:~/.local/bin/wifimenu &:}󰤟%{A}"
+ramp-signal-2 = "%{A1:~/.local/bin/wifimenu &:}󰤢%{A}"
+ramp-signal-3 = "%{A1:~/.local/bin/wifimenu &:}󰤥%{A}"
+ramp-signal-4 = "%{A1:~/.local/bin/wifimenu &:}󰤨%{A}"
+
+ramp-signal-foreground = ${colors.primary}
+
+; format-connected-prefix = "󰖩 "
+; format-connected-prefix-foreground = ${colors.primary}
+; format-connected = <label-connected>
+
+; format-disconnected-prefix = "󰖪 "
+; format-disconnected = <label-disconnected>
+; ; label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
+; label-disconnected = "%{A1:~/.local/bin/wifimenu &:} Offline%{A}"
 
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-;label-connected = %{F#F0C674}%ifname%%{F-}
-label-connected = "%{A1:~/.local/bin/wifimenu &:} %essid% %downspeed:8%%{A}"
+; label-connected = %{F#F0C674}%ifname%%{F-}
+label-connected = "%{A1:~/.local/bin/wifimenu &:}%essid%%{A}"
+
+
+# [network-base]
+# type = internal/network
+# interval = 1
+
+# accumulate-stats = true
+# unknown-as-up = true
+
+# format-connected-prefix = "󰖩 "
+# format-connected-prefix-foreground = ${colors.primary}
+# format-connected = <label-connected>
+
+# format-disconnected-prefix = "󰖪 "
+# format-disconnected = <label-disconnected>
+# ; label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
+# label-disconnected = "%{A1:~/.local/bin/wifimenu &:} Offline%{A}"
+
+# [module/wlan]
+# inherit = network-base
+# interface-type = wireless
+# ;label-connected = %{F#F0C674}%ifname%%{F-}
+# label-connected = "%{A1:~/.local/bin/wifimenu &:} %essid% %downspeed:8%%{A}"
 
 ; [module/eth]
 ; inherit = network-base
