--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -29,7 +29,7 @@ pseudo-transparency = false
 [bar/bar]
 
 ; Fonts
-font-0 = JetBrainsMono NF:style=Regular
+font-0 = JetBrainsMono NF:style=Regular;1
 
 width = 100%
 height = 24pt
@@ -37,7 +37,7 @@ radius = 0
 dpi = 96
 background = ${colors.background}
 foreground = ${colors.foreground}
-;line-size = 3pt
+line-size = 3pt
 border-size = 1.5pt
 border-color = #3D484D
 module-margin = 0
