--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -38,18 +38,19 @@ dpi = 96
 background = ${colors.background}
 foreground = ${colors.foreground}
 line-size = 3pt
-border-size = 1.5pt
-border-color = #3D484D
+border-top = 0pt
+border-bottom = 0pt
+border-color = ${colors.transparent}
 module-margin = 0
 padding-left = 0pt
-padding-right = 0pt
+padding-right = 6pt
 separator = " "
 ;separator = |
 ;separator-foreground = ${colors.background}
 
 fixed-center = true
 modules-left = i3 tray xwindow
-modules-right = xkeyboard temp cpu memory filesystem pulseaudio wlan date power
+modules-right = xkeyboard temp cpu memory filesystem pulseaudio wlan power date
 cursor-click = pointer
 # cursor-scroll = ns-resize
 enable-ipc = true
@@ -116,9 +117,11 @@ format-mounted-prefix = "%{A2:kitty ranger:} %{A}"
 format-mounted-prefix-foreground = ${colors.primary}
 
 ;label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
-label-mounted = "%{A2:kitty ranger:}%percentage_used%%{A}"
+label-mounted = "%{A2:kitty ranger:}%percentage_used%%%{A}"
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
+
+;==========================================================
 
 [module/pulseaudio]
 type = internal/pulseaudio
