--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -262,8 +262,9 @@ label-foreground = ${colors.primary}
 [module/temp]
 type = internal/temperature
 interval = 2
-thermal-zone = 0
-hwmon-path = /sys/class/hwmon/hwmon0/temp1_input
+# thermal-zone = 0
+zone-type = x86_pkg_temp
+# hwmon-path = /sys/class/hwmon/hwmon0/temp1_input
 base-temperature = 20 
 warn-temperature = 80
 units = true
