Updated kitty colours

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -38,7 +38,8 @@ bell_border_color #e67e80
 foreground #d3c6aa
 # foreground #d8caac
 
-background #2b3339
+background #2b353b
+# background #2b3339
 # background #1d2021
 # background #2d353b
 # background #323d43
@@ -57,24 +58,25 @@ selection_foreground  #3c474d
 selection_background  #86a15d
 
 # black
-color0 #7a8478
-color8 #859289
+color0 #3c474d
+color8 #868d80
 
 # red
-color1 #e68183
-color9 #e68183
+color1 #cf6163
+# color1 #cf7061
+color9 #e68e80
 
 # green
-color2  #a7c080
+color2  #87a15d
 color10 #a7c080
 
 # yellow
 color3  #dbbc7f
-color11 #dbbc7f
+color11 #d9bb80
 
 # blue
 color4  #7fbbb3
-color12 #7fbbb3
+color12 #83b6af
 
 # magenta
 color5  #d699b6
@@ -82,8 +84,8 @@ color13 #d699b6
 
 # cyan
 color6  #83c092
-color14 #83c092
+color14 #83c095
 
 # white
-color7  #d8cacc
+color7  #868d80
 color15 #d8cacc
