--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -58,34 +58,39 @@ selection_foreground  #3c474d
 selection_background  #86a15d
 
 # black
-color0 #868d80
-color8 #3c474d
+color0 #3c474d
+color8 #868d80
 
 # red
-color1 #cf6163
-# color1 #cf7061
-color9 #e68e80
+color1 #e68183
+# light red
+color9 #e68183
 
 # green
-color2  #87a15d
+color2  #a7c080
+# light green
 color10 #a7c080
 
 # yellow
-color3  #dbbc7f
+color3  #d9bb80
+# light yellow
 color11 #d9bb80
 
 # blue
-color4  #7fbbb3
+color4  #83b6af
+# light blue
 color12 #83b6af
 
 # magenta
-color5  #d699b6
-color13 #d699b6
+color5  #d39bb6
+# light magenta
+color13 #d39bb6
 
 # cyan
-color6  #83c092
-color14 #83c095
+color6  #87c095
+# light cyan
+color14 #87c095
 
 # white
 color7  #868d80
-color15 #d8cacc
+color15 #868d80
